--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
                 maxlength="30" /><br>
                <a href="file:///D:/github/Untitled-1.html?username=&password=" <font color=#0091ea>forgot password?</font></a>
                </p>
-               <a href="file:///D:/github/New%20Text%20Document.html">
+               <a href="file:///D:/github/home.html">
            <input type="button" style="background-color:#311b92;color:white;width:100px;
            height:30px;" value="login"></th></a>
              </tr>
